# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: my_workflow.yml
gendiff/: __init__.py  main.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: args_parser.py  file_parsers.py  gendiff.py  json_parser.py  parser.py
tests/: test_gendiff.py
